samples/_failures_safe/1761082420_e52e8d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa7e2482.c: In function ‘main’:
./samples/SAFE/__tmp_fa7e2482.c:143:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 |     uint8_t test_data2[]
      |     ^~~~~~~
./samples/SAFE/__tmp_fa7e2482.c:143:5: error: expected declaration or statement at end of input
